--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   </head>
-  <body style="margin: 0; background-color: black; color: white">
+  <body style="margin: 0; background-color: black; color: white; font-family: sans-serif; font: menu">
     <div id="react-app"></div>
     <script src="./app.js" type="module"></script>
   </body>
